--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "vee-validate": "^2.2.10",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "flush-promises": "^1.0.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
